src/objects/Survey_Appointment_Message_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API_Failure_Message__c</fullName>
        <label>API Failure Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Result_Failure_Message__c</fullName>
        <label>API Result Failure Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failed_to_Reach_Message__c</fullName>
        <label>Failed to Reach Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Message__c</fullName>
        <label>Success Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today_Timeout_Message__c</fullName>
        <label>Today Timeout Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Survey Appointment Message Setting</label>
</CustomObject>